force-app/main/default/objects/Contact/fields/Company_Counterpart__c.field-meta.xml
<CustomField>
    <fullName>Company_Counterpart__c</fullName>
    <label>Company Counterpart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>