force-app/main/default/objects/Contact/fields/Company_Counterpart_Contact__c.field-meta.xml
<CustomField>
    <fullName>Company_Counterpart_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Counterpart Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>