force-app/main/default/objects/Contact/fields/Relationship_Score_Image__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score_Image__c</fullName>
    <formula>IF(ISPICKVAL( Relationship_Score__c ,&quot;5&quot;),IMAGE(&quot;/resource/Star5.png&quot;,&quot;5 Star&quot;),
			IF(ISPICKVAL( Relationship_Score__c ,&quot;4&quot;),IMAGE(&quot;/resource/Star4&quot;,&quot;4 Star&quot;),
						IF(ISPICKVAL( Relationship_Score__c ,&quot;3&quot;),IMAGE(&quot;/resource/Star3&quot;,&quot;3 Star&quot;),
									IF(ISPICKVAL( Relationship_Score__c ,&quot;2&quot;),IMAGE(&quot;/resource/Star2&quot;,&quot;2 Star&quot;),
									    IMAGE(&quot;/resource/Star1&quot;,&quot;1 Star&quot;)
												)
									)
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Score Image</label>
    <type>Text</type>
</CustomField>