force-app/main/default/objects/Contact/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Type</label>
    <referenceTo>Conf_Category__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>