force-app/main/default/objects/Contact/fields/Score_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Score_Image_Link__c</fullName>
    <formula>IF(ISPICKVAL( Relationship_Score__c ,&quot;5&quot;),&quot;/resource/Star5&quot;,
IF(ISPICKVAL( Relationship_Score__c ,&quot;4&quot;),&quot;/resource/Star4&quot;,
IF(ISPICKVAL( Relationship_Score__c ,&quot;3&quot;),&quot;/resource/Star3&quot;,
IF(ISPICKVAL( Relationship_Score__c ,&quot;2&quot;),&quot;/resource/Star2&quot;,
&quot;/resource/Star1&quot;
)
)
)
)</formula>
    <label>Score Image Link</label>
    <type>Text</type>
</CustomField>