force-app/main/default/objects/Contact/fields/Soft_Credits__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credits__c</fullName>
    <label>Soft Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>