force-app/main/default/objects/Contact/fields/Sponsor_Credit__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Credit__c</fullName>
    <label>Sponsor Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>